# crafting

./: CMakeLists.txt  chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  debug.h  main.c  memory.c  memory.h  object.c  object.h  scanner.c  scanner.h  table.c  table.h  value.c  value.h  vm.c  vm.h
64OS/: ImageMaker.c  Main.c  Types.h
64OS/BootLoader/: BootLoader.asm
64OS/Kernel32/Source/: AssemblyUtility.asm  AssemblyUtility.h  EntryPoint.asm  EntryPoint.s  Keyboard.c  Keyboard.h  Main.c  Memory.asm  ModeSwitch.asm  ModeSwitch.h  Page.c
64OS/Kernel64/Source/: 2DGraphics.c  2DGraphics.h  AssemblyUtility.asm  AssemblyUtility.h  CacheManager.c  CacheManager.h  Console.c  Console.h  ConsoleShell.c  ConsoleShell.h  Descriptor.c  Descriptor.h  DynamicMemory.c  DynamicMemory.h  EnglishFont.c  EntryPoint.asm  FileSystem.c  FileSystem.h  Font.h  HardDisk.c  HardDisk.h  IOAPIC.c  IOAPIC.h  ISR.asm  ISR.h  InterruptHandler.c  InterruptHandler.h  Keyboard.c  Keyboard.h  List.c  List.h  LocalAPIC.c  LocalAPIC.h  MPConfigurationTable.c  MPConfigurationTable.h  Main.c  ModeSwitch.asm  MultiProcessor.c  MultiProcessor.h  PIC.c  (+22 more)
64OS/Utility/Files/: BTree.c  BTree.h  BaseHeader.h  Hash.c  Hash.h  HashMain.c  HashPage.c  HashPage.h  Hashing.c  Hashing.h
64OS/Utility/ImageMaker/: ImageMaker.c
acwj/acwj1_scanner/: declaration.h  definitions.h  main.c  scan.c
acwj/acwj1_scanner_2parser/: data.h  declaration.h  definitions.h  expression.c  scan.c  tree.c
complete/: chunk.c  compiler.c  compiler.h  debug.c  debug.h  main.c  memory.h  scanner.c  scanner.h  table.h  vm.h
cray/chunks of bytecode/: chunk.c  chunk.h  common.h  debug.c  debug.h  main.c  memory.c  memory.h  value.c  value.h  vm.c  vm.h
small/: codegen.c  codegen.h  compile.c  getSource.c  getSource.h  main.c  table.c  table.h
